# goni-cognitive-os

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: vision-api-strategy.md
goni/: __init__.py  config.py
goni/act/: __init__.py  browser.py  desktop.py
goni/api/: main.py
goni/brain/: __init__.py  base.py  stub.py
goni/decide/: __init__.py  brain_gemini.py  brain_grok.py  brain_local.py  router.py  server.py  vision_payload.py
goni/memory/: __init__.py  schema.sql  sqlite_mem.py  sqlite_store.py
goni/perceive/: __init__.py  perceive.py
goni/perception/: __init__.py  models.py  stub.py
goni/voice/: __init__.py  stt.py  tts.py
scripts/: run_perception.ps1  run_server.ps1  test_command.ps1
tests/: test_api.py  test_memory.py  test_models.py  test_providers.py  test_router.py
