[project]
name = "goni-cognitive-os"
version = "0.1.0"
description = "Local-first FastAPI skeleton for the GONI Cognitive OS V1 backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp"
